# Cool-tees-backend

./: db.sqlite3  pyproject.toml
apps/carts/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/carts/migrations/: 0001_initial.py  0002_cart_size.py  0003_auto_20220227_2215.py
apps/favourite_items/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/favourite_items/migrations/: 0001_initial.py  0002_auto_20220227_2215.py
apps/items/: apps.py  models.py  serializers.py  urls.py  views.py
apps/items/migrations/: 0001_initial.py  0002_alter_item_name.py  0003_item_size.py  0004_remove_item_size.py  0005_item_recomendeditemsimage.py  0006_auto_20220222_1216.py  0007_auto_20220224_0613.py  0008_auto_20220227_2215.py
apps/orders/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_auto_20220227_2215.py
apps/posts/: models.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_remove_post_like_count.py  0003_auto_20210922_0240.py  0004_alter_post_id.py  0005_auto_20220227_2215.py
apps/recomendedcarts/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/recomendedcarts/migrations/: 0001_initial.py  (+2 more)
apps/recomendeditems/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  mixins.py  models.py  serializers.py  urls.py  views.py
apps/wishlist/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
django_project/: constants.py  settings.py  urls.py
(+11 files in other folders)
